<resources>
    <!--Cac dong string su dung trong chuong trinh-->
    <!--Toi uu viec chinh sua va ho tro da ngon ngu-->
    <string name="app_name">Thông Báo Nông Lâm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Banner Trường</string>
    <string name="nav_header_desc">Trường Đại Học Nông Lâm</string>
    <string name="nav_feature"></string>
    <string name="nav_home">Trang chủ</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="menu_action_search">Tìm kiếm</string>
    <string name="menu_action_group_join">Đăng kí nhóm</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Mật khẩu không an toàn</string>
    <string name="error_incorrect_password">Mật khẩu không đúng</string>
    <string name="error_field_required">Thiếu thông tin</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_quen_mat_khau">Quên mật khẩu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="announce_tabs_all">Tất Cả</string>
    <string name="announce_tabs_important">Quan Trọng</string>
    <string name="announce_tabs_recent">Mới Nhất</string>
    <string name="announce_tabs_faculty">Khoa</string>
    <string name="announce_tabs_group">Nhóm</string>
    <string name="announce_tabs_subject">Bộ Môn</string>

    <string name="title_activity_announce_detail">AnnounceDetailActivity</string>
    <string name="img_des">  </string>
    <string name="error_connection">Đã xảy ra lỗi trong quá trình kết nối</string>
    <string name="login_user_id">Mã số</string>
    <string name="error_login">Đăng nhập thất bại</string>
    <string name="nav_group">Nhóm</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_help">Hỗ trợ</string>
    <string name="group_search">Mã nhóm</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="menu_action_post_announce">Đăng thông báo</string>
    <string name="title_activity_post_announce">PostAnnounceActivity</string>
    <string name="hint_post_announce_header">Tiêu đề thông báo</string>
    <string name="hint_post_announce_content">Nội dung thông báo</string>
    <string name="hint_post_announce_class_id">Mã nhóm</string>
    <string name="post_announce_send_btn">Xác nhận</string>
    <string name="post_announce_reset_btn">Đặt lại</string>
    <string name="forget_pass_return_btn">Quay lại</string>
    <string name="forget_pass_et_id">Mã số</string>
    <string name="forget_pass_submit_btn">Khôi phục mật khẩu</string>
    <string name="forget_pass_reset_success">Đã khôi phục mật khẩu thành công. Hãy kiểm tra hộp thư để lấy mật khẩu mới.</string>
    <string name="menu_action_delete_announce">Xoá thông báo</string>
    <string name="menu_action_edit_announce">Sửa thông báo</string>
    <string name="setting_change_pass">Thay đổi mật khẩu</string>
    <string name="title_activity_change_pass">ChangePassActivity</string>
    <string name="change_pass_submit_btn">Đổi mật khẩu</string>
    <string name="change_pass_old_pass">Mật khẩu cũ</string>
    <string name="change_pass_new_pass">Mật khẩu mới</string>
    <string name="change_pass_new_pass_repeat">Nhập lại mật khẩu</string>
    <string name="error_not_match_password">Mật khẩu không giống</string>
    <string name="title_activity_group_join">GroupJoinActivity</string>
    <string name="group_join_submit_btn">Vào nhóm</string>
    <string name="group_join_success_message">Đăng kí vào nhóm thành công</string>
    <string name="group_join_fail_message">Đăng kí vào nhóm thất bại</string>
    <string name="change_pass_success_message">Thay đổi mật khẩu thành công</string>
    <string name="change_pass_fail_message">Thay đổi mật khẩu thất bại</string>
    <string name="alert_change_pass">Xác nhận thay đổi mật khẩu</string>
    <string name="alert_change_pass_detail">Bạn chắc chắn muốn thay đổi mật khẩu ?</string>
    <string name="dialog_answer_yes">Có</string>
    <string name="dialog_answer_no">Không</string>
    <string name="default_resource"></string>
    <string name="alert_group_join">Xác nhận muốn vào nhóm</string>
    <string name="alert_group_join_detail">Bạn chắc chắn muốn vào nhóm ?</string>
    <string name="group_join_hint_group_id">Mã nhóm</string>
    <string name="alert_post_announce">Xác nhận đăng thông báo</string>
    <string name="alert_post_announce_detail">Bạn chắc chắn muốn đăng thông báo ?</string>
    <string name="post_announce_success_message">Đăng thông báo thành công</string>
    <string name="post_announce_fail_message">Đăng thông báo thất bại</string>
    <string name="title_activity_set_member_level">SetMemberLevelActivity</string>
    <string name="announce_tabs_class">Lớp</string>
    <string name="logout_confirm">Xác nhận đăng xuất</string>
    <string name="logout_confirm_quiz">Bạn chắc chắn muốn đăng xuất ?</string>
    <string name="delete_announce_confirm">Xác nhận xóa thông báo</string>
    <string name="delete_announce_confirm_quiz">Bạn chắc chắn muốn xóa thông báo ?</string>
    <string name="announce_delete_success">Xóa thông báo thành công</string>
    <string name="announce_delete_fail">Xóa thông báo không thành công</string>
</resources>
